--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,26 @@ on:
     branches: [main]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.21'
+          
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
+          args: --config .golangci.yml
+          
   test:
     runs-on: ubuntu-latest
+    needs: lint
     
     services:
       postgres:
@@ -37,7 +55,7 @@ jobs:
       - name: Set up Python for server
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.13'
           
       - name: Checkout cyborgdb-service repository
         uses: actions/checkout@v4
@@ -60,7 +78,7 @@ jobs:
       #   run: |
       #     echo "=== Testing with Lite version ==="
       #     ...
-                
+
       - name: Test with Standard version
         run: |
           echo "=== Testing with Standard version ==="
