--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -112,12 +112,12 @@ jobs:
           go mod init demo_key_helper
           go mod edit -replace github.com/cyborginc/cyborgdb-go=$GITHUB_WORKSPACE
           go get github.com/cyborginc/cyborgdb-go
-          CYBORGDB_API_KEY=$(go run main.go)
+          CYBORGDB_API_KEY=$(go run main.go 2>&1 | grep -o 'cyborg_[a-zA-Z0-9_]*' | head -n1)
           if [ -z "$CYBORGDB_API_KEY" ]; then
             echo "Failed to generate demo API key"
             exit 1
           fi
-          echo "CYBORGDB_API_KEY=${CYBORGDB_API_KEY}" >> $GITHUB_ENV
+          echo "CYBORGDB_API_KEY=$CYBORGDB_API_KEY" >> $GITHUB_ENV
           echo "Demo API key loaded successfully"
 
       - name: Test with Standard version
